# bevy-template

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
